--- a/docs/Modules/Cms/i18n.md
+++ b/docs/Modules/Cms/i18n.md
@@ -1,9 +1,17 @@
+---
+layout: page
+title: CMS API
+permalink: /Modules/Cms/i18n.html
+---
+
 <!-- Name: Modules/Cms/i18n -->
 <!-- Version: 2 -->
 <!-- Last-Modified: 2008/09/24 17:28:33 -->
 <!-- Author: demian -->
-= CMS Internationalisation = 
-[[TOC]]
+#  CMS Internationalisation
+* TOC
+{:toc}
+
 ## Overview
 The Seagull CMS generates a range of content that can be displayed in any language of your choice.  The content be either
  * text content of a pre-defined type
@@ -16,26 +24,25 @@ The Seagull CMS generates a range of content that can be displayed in any langua
 
 If module/action params are already present in your url, you can invoke a target language with a URL like
 
-    http://example.com/cms/contentview/lang/zh-TW/
+	http://example.com/cms/contentview/lang/zh-TW/
 
 If you want to specify the language when no URL params exist do it as follows
 
-    http://example.com?lang=zh-TW
+	http://example.com?lang=zh-TW
 
-## SGL_Translation3
-The SGL_Translation3 library is responsible for
+## SGL\_Translation3
+The `SGL_Translation3` library is responsible for
  * initializing the framework language by detecting the admins preferences, browser lang accept string, country code of the current domain, etc
  * initializing the content language
  * storing the content dictionaries - a dictionary is a collection of language key/value pairs, examples of dictionaries are navigation, categories, the default module, etc.
 
 ### Example Usage
 
-    //  sets default language for framework, checks for lang param used to set user lang
-    $trans = SGL_Translation3::singleton('array');
-    try {
-        $trans->loadDefaultDictionaries();
-    } catch (Exception $e) {
-        SGL::raiseError($e->getMessage(), SGL_ERROR_NOFILE);
-    }
-
+	//  sets default language for framework, checks for lang param used to set user lang
+	$trans = SGL_Translation3::singleton('array');
+	try {
+	    $trans->loadDefaultDictionaries();
+	} catch (Exception $e) {
+	    SGL::raiseError($e->getMessage(), SGL_ERROR_NOFILE);
+	}
 
