wiki conversion in progress /15

--- a/docs/Community/MonthlyMeeting/20061205.md
+++ b/docs/Community/MonthlyMeeting/20061205.md
@@ -4,7 +4,7 @@
 <!-- Author: lakiboy -->
 # CSS - Javascript Cleaning Meeting
 
-The discussion was logged here : [http://svn.seagullproject.org/~logbot/index.php?date=2006-12-05] starting at 10:39
+The discussion was logged here : [http://svn.seagullproject.org/\~logbot/index.php?date=2006-12-05] starting at 10:39
 
 ## Overview
 This meeting will aim to see what changes can be done to better use CSS and integrate Javascript files in Seagull Framework.
@@ -16,7 +16,7 @@ At the end of meeting, we should have defined a roadmap to implement those chang
 ### CSS
 *1.efficient use of css files (performance, style.php, ...)*
 
- * use one single style.php file in SGL_THEME dir
+ * use one single style.php file in SGL\_THEME dir
  * allow possibility to split and load several files layout, fonts, core (with ability to define files load order)
  * rename to .css files if it loads faster than .php files
 
@@ -27,23 +27,23 @@ TO DECIDE: how to load these different files (in the link function? automaticall
 *2.structural VS presentational naming*
 
  * use maximum structural naming
- * use presentational naming for ~~CSS widgets~~ generic CSS rules
+ * use presentational naming for \~\~CSS widgets\~\~ generic CSS rules
 
 *3.refactoring CSS rules between layout, styling*
 
 Split core.php into
  * layout.php = main structure
  * style.php (instead of core.php) = default tags definitions + some styling (fonts, colors, ...)
- * ~~widgets.php~~ rules.php = some usefull CSS rules using presentational naming
+ * \~\~widgets.php\~\~ rules.php = some usefull CSS rules using presentational naming
 
 Rename these file with .css extension if benchmark from mwattier is ok
 
-*4.making default_theme IE7 ready (and outstanding IE bugfixes)*
+*4.making default\_theme IE7 ready (and outstanding IE bugfixes)*
  * using css helpers instead of specific browsers CSS hacks for simplicity
 
 
-*5.defining some ~~CSS widgets~~ generic CSS rules (working with forms, tables)*
- * identify which are generic enough to be added and put the rules inside ~~widgets.php~~ main-rules.php css file
+*5.defining some \~\~CSS widgets\~\~ generic CSS rules (working with forms, tables)*
+ * identify which are generic enough to be added and put the rules inside \~\~widgets.php\~\~ main-rules.php css file
 
 ### JAVASCRIPT
 *1.javascript strategy in seagull (flexibility, loose coupling, performance)*
@@ -58,10 +58,8 @@ Rename these file with .css extension if benchmark from mwattier is ok
  * allow to define some js vars from php
 
 
-    $output->defineJsVar('WEBROOT', SGL_WEB_ROOT)
-    
-    # and SGL_JS will be prefixed automatically (depending in the namespace we'll use)
-    
+	$output-\>defineJsVar('WEBROOT', SGL\_WEB\_ROOT)
+	# and SGL\_JS will be prefixed automatically (depending in the namespace we'll use)
 
 
 *3.refactoring core seagull js methods, reducing them at minimum, put them in namespace (e.g. sgl.core, sgl.utils, ...)*
@@ -73,11 +71,9 @@ For CSS
 
  1. Split core.php into main-layout.php, main-style.php, main-rules.php (instead of main-widgets cause widget has a specific meaning)
  2. Rename style.php to css.php and give it ability to load "main-" files automatically
- 3. Clean up default_theme
+ 3. Clean up default\_theme
  4. Fix outstanding IE bugs
 
 For Javascript
  
  1. Need more feedback and discussion through RFC
-
-[[AddComment]]
